--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,8 @@
 <body>
     <canvas id="canvas"></canvas>
     <p id="ke"></p>
+    <script src="bond-data.js"></script>
+    <script src="element-data.js"></script>
     <script src="script.js"></script>
 </body>
 
