LJ force, colors, tabs, improved container

--- a/website/index.html
+++ b/website/index.html
@@ -9,8 +9,23 @@
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
-    <p id="ke"></p>
+    <div class="tabs-container">
+        <ul class="tabs-header">
+            <li class="tab">1</li>
+            <li class="tab">2</li>
+        </ul>
+        <div class="tabs">
+            <div>
+                <div><canvas id="canvas"></canvas></div>
+                <p id="ke"></p>
+            </div>
+            <div>
+                <p>bingy bungy bungy</p>
+            </div>
+
+        </div>
+    </div>
+    </div>
     <script src="bond-data.js"></script>
     <script src="element-data.js"></script>
     <script src="script.js"></script>
