split script.js into different files

--- a/website/index.html
+++ b/website/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="tabs-container">
         <ul class="tabs-header">
-            <li class="tab">1</li>
-            <li class="tab">2</li>
+            <li hidden class="tab">1</li>
+            <li hidden class="tab">2</li>
         </ul>
         <div class="tabs">
             <div>
@@ -26,9 +26,8 @@
         </div>
     </div>
     </div>
-    <script src="bond-data.js"></script>
-    <script src="element-data.js"></script>
-    <script src="script.js"></script>
+
+    <script src="script.js" type="module"></script>
 </body>
 
 </html>
