--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="circle" id="cursor"></div>
-    <img id="toggle-l" src="img/left.png" width="50px"></img>
+    <img id="toggle-l" src="img/left.png" width="50px" hidden></img>
     <img id="toggle-r" src="img/right.png" width="50px"></img>
     <div class="sidebar" id="sidebar-l">
     </div>
