throw and rotate atoms, split atom.bonds array

--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
     <canvas id="canvas"></canvas>
     <div class="sidebar" id="sidebar-r">
         <h1>PERIODIC TABLE</h1>
-        <table id="periodic_table">
+        <table hidden id="periodic_table">
             <colgroup>
                 <col>
                 <col>
